productions/veadk/archives/1.0.9/en/changelog.mdx
---
title: "Changelog"
zh_link: "/productions/veadk/archives/1.0.9/zh/changelog"
---

This changelog cumulatively lists all public user-facing changes from VeADK 1.0.0 through 1.0.9. Released versions are ordered newest first.

## 1.0.9

VeADK 1.0.9 was released on July 26, 2026. The following table lists its public user-facing changes. See the [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.9) for the complete commit history.

| Module | Change details | Link |
| --- | --- | --- |
| Long-term memory | Added the TOS ContextBucket backend for managed memory inference and retrieval with per-`user_id` isolation. | [Store memory in TOS ContextBucket](/productions/veadk/archives/1.0.9/en/components/memory/tos-context) |
| Studio knowledge bases | Agent creation now defaults to VikingDB Knowledge, removes the local vector-store option, and can select an existing knowledge-base collection visible to the current account in the Beijing-region `default` project. | [Studio agent workbench](/productions/veadk/archives/1.0.9/en/components/frontend/studio) |
| Studio remote agents | Remote-agent configuration can select and refresh AgentKit agent centers by region. Remote agents remain available only as sub-agents. | [Studio agent workbench](/productions/veadk/archives/1.0.9/en/components/frontend/studio) |
| Studio message feedback | AgentKit Runtime answers can be rated with like/dislike controls and written idempotently to per-agent evaluation sets. A deterministic fallback is used when the standard set name is reserved but hidden. | [VeADK Frontend](/productions/veadk/archives/1.0.9/en/components/frontend/veadk-frontend) |
| Studio release and self-update | `veadk studio deploy` uses the `veadk-studio` TOS bucket in the deployment region as its release channel by default. Administrators can update the frontend and backend in Studio, and the account menu shows the current system version. | [Studio agent workbench](/productions/veadk/archives/1.0.9/en/components/frontend/studio) |
| Session capability overlays | AgentKit applications can add or remove built-in tools and remote skills for one session without changing the deployed agent. | [Deploy to AgentKit](/productions/veadk/archives/1.0.9/en/deploy/agentkit) · [Studio agent workbench](/productions/veadk/archives/1.0.9/en/components/frontend/studio) |
| Studio agent information | The conversation view adds an agent information rail for the current agent's description, model, tools, skills, and collaboration topology. | [VeADK Frontend](/productions/veadk/archives/1.0.9/en/components/frontend/veadk-frontend) |
| Studio creation workbench | Custom creation adds code-execution configuration and resource-picker search, including `AGENTKIT_TOOL_ID` and `AGENTKIT_TOOL_REGION`. | [Studio agent workbench](/productions/veadk/archives/1.0.9/en/components/frontend/studio) · [Code sandbox](/productions/veadk/archives/1.0.9/en/components/tools/code-sandbox) |

## 1.0.8

VeADK 1.0.8 was released on July 23, 2026. The following table lists its public user-facing changes. See the [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.8) for the complete commit history.

| Module | Change details | Link |
| --- | --- | --- |
| Studio remote agents | Custom creation supports remote-agent child nodes configured with an AgentKit agent-center ID, recall count, region, and OpenAPI endpoint. Matching capabilities are discovered for each turn, and a remote agent cannot be the root agent. | [Studio agent workbench](/productions/veadk/archives/1.0.8/en/components/frontend/studio) |
| Studio Runtimes | Runtime connection failures distinguish access denied, Agent Server unreachable, and authentication failure, with corresponding troubleshooting guidance. | [Studio agent workbench](/productions/veadk/archives/1.0.8/en/components/frontend/studio) |
| Studio sessions | Preserves conversation history when sending follow-up messages. Temporary-session and Skill-creation provisioning failures display credential-safe diagnostics for Tool, region, or model-credential problems. | [Studio agent workbench](/productions/veadk/archives/1.0.8/en/components/frontend/studio) |
| Studio deployment credentials | `veadk studio deploy` resolves credentials from command options, `VOLCENGINE_ACCESS_KEY` / `VOLCENGINE_SECRET_KEY`, then the `[default]` profile in `~/.volc/credentials`. | [Studio agent workbench](/productions/veadk/archives/1.0.8/en/components/frontend/studio) |
| Studio deployment resources | Shanghai deployments keep the Function, API Gateway, AgentKit CodeEnv Tools, and sessions in consistent regions. Temporary-session and Skill-creation model credentials are configured on their Tools, while the VeFaaS Function receives only Tool IDs. | [Studio agent workbench](/productions/veadk/archives/1.0.8/en/components/frontend/studio) |

## 1.0.7

VeADK 1.0.7 was released on July 23, 2026. The following table lists its public user-facing changes. See the [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.7) for the complete commit history.

| Module | Change details | Link |
| --- | --- | --- |
| Code sandbox | `run_code` adds `bash` language support to run shell scripts in the AgentKit sandbox, with `exec_dir`, `env`, `hard_timeout`, and `max_output_length` parameters that control the working directory, environment variables, hard timeout, and maximum output length. | [Code sandbox](/productions/veadk/archives/1.0.7/en/components/tools/code-sandbox) |
| Studio creation modes | Adds Skill creation across two independent AgentKit CodeEnv sessions; candidates can be compared, downloaded as a ZIP, or published to AgentKit, and the mode is available to developers and admins only. Also adds temporary conversations that are deleted on exit and are not written to normal Studio history. | [Studio agent workbench](/productions/veadk/archives/1.0.7/en/components/frontend/studio) |
| Studio smart search | Adds agent-aware smart search over conversation history, the mounted web-search tool, knowledge base, and long-term memory. Agent metadata advertises mounted sources, and Studio disables unavailable sources. | [Studio agent workbench](/productions/veadk/archives/1.0.7/en/components/frontend/studio) |
| Studio roles and access | Adds `--admin` and `--developer` to `veadk studio`, `veadk frontend`, and `veadk studio deploy`. The UI displays the signed-in user's email, role badge, and OAuth profile picture. | [Studio agent workbench](/productions/veadk/archives/1.0.7/en/components/frontend/studio) |
| Studio update command | Adds `veadk studio update --vefaas-app-name <name>`, which rebuilds Studio from a local VeADK checkout while preserving the existing URL, SSO, IAM role, gateway, environment variables, title, and logo. When `--region` and `--project` are omitted, it searches Beijing and Shanghai across all visible projects. | [Studio agent workbench](/productions/veadk/archives/1.0.7/en/components/frontend/studio) |
| Studio deployment | `veadk studio deploy` automatically creates the two AgentKit CodeEnv Tools used by temporary chats and Skill creation; existing Tool IDs can be supplied with `--sandbox-chat-codex-tool-id` and `--sandbox-skill-creator-tool-id`. After deployment, client sign-in skips repeated OAuth consent. | [Studio agent workbench](/productions/veadk/archives/1.0.7/en/components/frontend/studio) |
| Feishu channel | `FeishuChannelExtension` can fetch thread history and quoted messages through the Feishu OpenAPI, using `include_parent_message`, `include_thread_history`, and `thread_history_limit`, and prepends the quoted or thread content to the inbound message. | [Feishu channel](/productions/veadk/archives/1.0.7/en/components/extensions/feishu-channel) |
| Studio workbench | Refines the custom-creation workbench: local Skills accept folders or ZIP files with automatic format detection; AgentKit Skill Spaces and their Skills can be browsed by region and project; the deployment page shows the agent topology and supports configuration export and source download. It also improves runtime management and responsive layout, new-chat startup, the agent runtime selector, video rendering, and tool-call status display. | [Studio agent workbench](/productions/veadk/archives/1.0.7/en/components/frontend/studio) |
| Dependencies | Relaxes the `psycopg2-binary` version constraint to `>=2.9.10`; requires the AgentKit SDK to provide default CORS configuration. | [Installation](/productions/veadk/archives/1.0.7/en/get-started/installation) |

## 1.0.6

VeADK 1.0.6 was released on July 20, 2026. The following table lists its public user-facing changes. See the [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.6) for the complete commit history.

| Module | Change details | Link |
| --- | --- | --- |
| Studio branding | `veadk studio` and `veadk frontend` add `--site-title` (at most 6 characters) and `--site-logo` (local image or HTTP(S) URL, at most 5 MB; PNG, JPEG, GIF, WebP, AVIF, ICO supported) to set the system name and logo. The logo is used in the sidebar, login page, and browser favicon; the system name also becomes the browser page title. Omitting `--site-title` keeps the default `VeADK Studio`. The equivalent environment variables are `VEADK_SITE_TITLE` and `VEADK_SITE_LOGO`. Cloud deployment accepts the same options; remote images are downloaded during deployment and bundled into VeFaaS. | [Studio agent workbench](/productions/veadk/archives/1.0.6/en/components/frontend/studio) |
| Studio deployment | `veadk studio deploy` supports `--region` to select the deployment region (`cn-beijing` by default, `cn-shanghai`); VeFaaS, API Gateway, and other resources are created in the selected region. A new `--project` selects the VeFaaS function project and defaults to `default`. Deployment automatically locates the VeIdentity user pool and client across Beijing and Shanghai, emitting a warning and continuing when matched cross-region. | [Studio agent workbench](/productions/veadk/archives/1.0.6/en/components/frontend/studio) |
| Studio deployment IAM | `veadk studio deploy` checks `ServerlessApplicationRole` before deployment and creates the role with the `vefaas_full_access` custom policy and required system policies when it is missing. This check runs even when `--iam-role` is provided. | [Studio agent workbench](/productions/veadk/archives/1.0.6/en/components/frontend/studio) |
| Studio authoring and debugging | System prompts now support a WYSIWYG Markdown editor with heading and list shortcuts. Initialization, session, and conversation failures show credential-redacted error details and Runner logs that can be expanded and copied. Agent names are validated against Google ADK rules: they must start with an ASCII letter or underscore, contain only ASCII letters, digits, and underscores, cannot use the reserved name `user`, and must be unique within the Agent tree. | [Studio agent workbench](/productions/veadk/archives/1.0.6/en/components/frontend/studio) |
| AgentKit deployment | Feishu, knowledge-base, short-/long-term memory, and observability settings appear in their respective feature sections; their values are converted to runtime environment variables only during deployment. Selecting an observability exporter also enables the corresponding `ENABLE_*` flag. These values are not written to generated source or exported YAML; the deployment page mirrors them for review. Multi-instance deployments should use a database-backed short-term memory store; when `run_sse` returns 404, the UI suggests checking whether an in-memory or SQLite session landed on a different instance. When deploying from the bundled Web UI, cloud image build failures include a credential-safe build-log excerpt so dependency or Dockerfile errors can be diagnosed directly. | [Deploy to AgentKit](/productions/veadk/archives/1.0.6/en/deploy/agentkit) |
| Studio runtime management | Improved the runtime management view and responsive layout. | [Studio agent workbench](/productions/veadk/archives/1.0.6/en/components/frontend/studio) |
| Feishu channel | Toggling the Feishu channel on the deployment page regenerates the project so that `app.py`, the `extensions` dependency, and runtime environment variables stay aligned before deployment. | [Studio agent workbench](/productions/veadk/archives/1.0.6/en/components/frontend/studio) |

## 1.0.5

VeADK 1.0.5 was released on July 19, 2026. The following table lists its public user-facing changes. See the [GitHub Release](https://github.com/volcengine/veadk-python/releases/tag/1.0.5) for the complete commit history.

| Module | Change details | Link |
| --- | --- | --- |
| Studio and Frontend | Studio now enables the same complete UI as Frontend and opens on the chat view by default. Added cloud Runtime selection, Skill Hub/local upload/AgentKit SkillSpace sources, multimodal conversations, and structured skill and sub-agent invocation. The custom creation flow was redesigned; intelligent, template, and workflow entries are currently marked as coming soon. Also improved deployment regions, environment variables, task status, retry behavior, and OAuth token forwarding. | [VeADK Frontend](/productions/veadk/archives/1.0.5/en/components/frontend/veadk-frontend) · [Studio agent workbench](/productions/veadk/archives/1.0.5/en/components/frontend/studio) |
| Models | Changed the default inference model to `doubao-seed-2-1-pro-260628`; Responses API now supports fallback models and Ark context management. | [Models](/productions/veadk/archives/1.0.5/en/components/agent/model) |
| Runtime | Added `piagent` to `Agent.runtime`, including bridges for function tools, MCP tools, and skills; the package no longer vendors the PiAgent binary. | [Runtime](/productions/veadk/archives/1.0.5/en/components/agent/runtime) |
| Studio testing | Generated agent projects can run in a restricted temporary server-side test process. The process is retained for 1,800 seconds by default and can be adjusted with a command option. | [Studio agent workbench](/productions/veadk/archives/1.0.5/en/components/frontend/studio) |
| Studio deployment | When Studio is deployed with its default IAM role, the command adds the system policies needed to access model, logging, tracing, knowledge, memory, and identity resources. An explicitly supplied custom role is not modified. | [Studio agent workbench](/productions/veadk/archives/1.0.5/en/components/frontend/studio) |
| AgentKit integration | Studio-generated applications now use the public `create_agentkit_app` function to provide AgentKit endpoints, health checks, topology, the built-in Web UI, and short-term memory defaults. | [Deploy to AgentKit](/productions/veadk/archives/1.0.5/en/deploy/agentkit) |
| Feishu channel | Improved extraction of text, card, and merged-forward messages and added compatibility with the synchronous Channel SDK lifecycle. | [Feishu channel](/productions/veadk/archives/1.0.5/en/components/extensions/feishu-channel) |

## 1.0.4

VeADK 1.0.4 was released on July 14, 2026. The following table lists its public user-facing changes.

| Module | Change details | Link |
| :--- | :--- | :--- |
| Studio | Added `veadk studio`, a focused workbench for agent creation and management. It supports intelligent, custom, and template creation; the workflow entry is marked as coming soon. AgentKit deployment progress is reported by stage. | [Studio agent workbench](/productions/veadk/archives/1.0.4/en/components/frontend/studio) |
| Agent management | Added an AgentKit runtime management view to Frontend and Studio. It lists workbench deployments for the current user, shows Runtime and primary-agent details, and can delete runtimes. | [Studio agent workbench](/productions/veadk/archives/1.0.4/en/components/frontend/studio) |
| VeFaaS deployment | Added `veadk studio deploy` to deploy Studio to VeFaaS with VeIdentity login and create or reuse a Serverless API Gateway and IAM role. | [Studio deployment](/productions/veadk/archives/1.0.4/en/components/frontend/studio) |
| VeADK Frontend | Added agent topology and transfer-path visualization. Project deployment now reports live build-image, deploy, and publish stages. | [VeADK Frontend](/productions/veadk/archives/1.0.4/en/components/frontend/veadk-frontend) |
| Harness skills | Harness `skills` accepts `space:<skill-space-id>` to load an entire AgentKit skills-center space alongside Skill Hub names or slugs. | [Skills](/productions/veadk/archives/1.0.4/en/components/agent/skills) |
| Frontend security | Removed the action that directly executed browser-submitted code; restricted the AgentKit proxy protocol, host, and credential requirements; and confined deployment and static-file paths. | [VeADK Frontend](/productions/veadk/archives/1.0.4/en/components/frontend/veadk-frontend) |
| Logging | Migrated logging to Python's standard `logging` package while retaining trace-ID correlation. Non-interactive output no longer contains color escapes, and streaming reasoning is no longer logged token by token. | [Application logging](/productions/veadk/archives/1.0.4/en/components/observability/logging) |
| Storage configuration | Expanded Milvus and OpenViking environment and configuration examples. Version 1.0.4 continues to provide the Milvus knowledge, OpenViking knowledge, and OpenViking long-term memory backends introduced in 1.0.3. | [Milvus](/productions/veadk/archives/1.0.4/en/components/knowledge/milvus) · [OpenViking knowledge](/productions/veadk/archives/1.0.4/en/components/knowledge/openviking) · [OpenViking memory](/productions/veadk/archives/1.0.4/en/components/memory/openviking) |

## 1.0.3

VeADK 1.0.3 contains the following public user-facing changes.

| Module | Change details | Link |
| :--- | :--- | :--- |
| Knowledge base | Added the `milvus` backend with Milvus service and Milvus Lite URIs, token or username/password authentication, database selection, initialization overwrite, timeout, and additional output fields. | [Store knowledge in Milvus](/productions/veadk/archives/1.0.3/en/components/knowledge/milvus) |
| Knowledge base | Added the `openviking` backend for importing files, directories, and text into OpenViking and retrieving and hydrating results by resource URI. | [Store knowledge in OpenViking](/productions/veadk/archives/1.0.3/en/components/knowledge/openviking) |
| Long-term memory | Added the `openviking` backend to store per-user entity, event, and preference memory while retaining user isolation across sessions. | [Store memory in OpenViking](/productions/veadk/archives/1.0.3/en/components/memory/openviking) |
| A2A | Calls to downstream agents in the AgentKit A2A Registry can propagate inbound `X-Ve-TIP-Token` and bearer JWT credentials. If a downstream call made with the inbound JWT returns `401`, VeADK can fall back to M2M OAuth2 and retry once. | [Inbound authentication](/productions/veadk/archives/1.0.3/en/components/security/inbound) |
| Dependencies | Consolidated duplicate dependency declarations, added the OpenViking SDK to the base dependencies, and added Milvus integrations to `extensions`. | [Installation](/productions/veadk/archives/1.0.3/en/get-started/installation) |

## 1.0.2

VeADK 1.0.2 contains the following public user-facing changes.

| Module | Change details | Link |
| :--- | :--- | :--- |
| Models | Added `MODEL_AGENT_API_KEY_NAME` and `Agent.model_api_key_name` to resolve an Ark API key by name. An explicit key value still has higher precedence. | [Model configuration](/productions/veadk/archives/1.0.2/en/components/agent/model) |
| Short-term memory | Added PostgreSQL `schema` configuration to isolate session tables for separate deployments in one database. VeADK creates a missing schema and pins the connection's `search_path`. | [Store sessions in PostgreSQL](/productions/veadk/archives/1.0.2/en/components/session/postgresql) |
| MCP | After an MCP Server session expires, the service restarts, or the connection drops, VeADK discards the stale session, reconnects, and retries tool discovery or execution once. | [Custom MCP Server](/productions/veadk/archives/1.0.2/en/components/tools/custom-mcp) |
| Frontend | Added a tool OAuth authorization card to VeADK Frontend: it opens the identity provider, accepts the callback, submits the credential, and resumes the original tool call. Also refined the account entry, login page, session list, empty-response notice, and default agent selection. | [VeADK Frontend](/productions/veadk/archives/1.0.2/en/components/frontend/veadk-frontend) |
| Network requests | VeSearch and web-fetch requests use a 30-second timeout so an unresponsive service does not block indefinitely. | [Volcengine search](/productions/veadk/archives/1.0.2/en/components/tools/vesearch) · [Web fetch](/productions/veadk/archives/1.0.2/en/components/tools/web-fetch) |
| Security | Web fetch verifies TLS certificates, and content-safety debug logs do not record API-key values. | [Web fetch](/productions/veadk/archives/1.0.2/en/components/tools/web-fetch) · [Content-safety guardrail](/productions/veadk/archives/1.0.2/en/components/security/content-safety) |

## 1.0.1

VeADK 1.0.1 was released on July 7, 2026. It adds Harness, A2A registration, and ADK skill integration, with updates to the Codex runtime and VeADK Frontend.

| Module | Change details | Link |
| --- | --- | --- |
| Codex runtime | Ships sandbox, network, and review defaults that allow full host and network access without interactive approval. | [Runtime safety](/productions/veadk/archives/1.0.1/en/components/agent/runtime#switch-the-execution-backend) |
| Harness | Adds the VeADK Harness extension to prepare context for each turn, compact large tool results, and verify final answers; Harness initialization also applies the agent description. | [Harness plugins](/productions/veadk/archives/1.0.1/en/components/execution-engine/index#use-harness-execution-enhancements) |
| A2A | Adds Harness A2A registration and corrects its registration behavior. | [Remote-agent discovery](/productions/veadk/archives/1.0.1/en/components/execution-engine/index#discover-remote-agents-from-agentkit) |
| A2A | Adds OAuth authentication to A2A calls. | [A2A authentication](/productions/veadk/archives/1.0.1/en/components/security/outbound#a2a-remote-agent-authentication) |
| Codex runtime | Adds configurable retries for transient backend errors and restores web search through the Responses shim. | [Codex backend requests](/productions/veadk/archives/1.0.1/en/components/agent/runtime#codex-backend-requests) |
| Skills | Adds `VeSkillRegistry` for using SkillHub and Skill Space sources with Google ADK `SkillToolset`; local skills should migrate to ADK `SkillToolset`, while the legacy `Agent(skills=..., skills_mode="local")` entry point remains compatible but is deprecated. | [Cloud skills](/productions/veadk/archives/1.0.1/en/components/agent/skills#use-cloud-skills) |
| VeADK Frontend | Adds gateway authentication mode and a missing-Volcengine-credentials notice during agent creation. | [Frontend authentication](/productions/veadk/archives/1.0.1/en/components/frontend/veadk-frontend#authentication) |
| Codex runtime | Passes agent skills through to the Codex runtime. | [Codex skills and tools](/productions/veadk/archives/1.0.1/en/components/agent/runtime#skills-and-tools-in-the-codex-runtime) |
| Codex runtime | Executes an agent's MCP and function tools through the Codex runtime. | [Codex skills and tools](/productions/veadk/archives/1.0.1/en/components/agent/runtime#skills-and-tools-in-the-codex-runtime) |
| Examples | Adds a Codex-runtime example that combines a local skill with an MCP tool. | [Codex skills and tools](/productions/veadk/archives/1.0.1/en/components/agent/runtime#skills-and-tools-in-the-codex-runtime) |

See the [VeADK 1.0.1 release](https://github.com/volcengine/veadk-python/releases/tag/1.0.1) for the complete published record.

## 1.0.0

VeADK 1.0.0 was released on June 22, 2026. The table follows the public release notes; the published change from 0.5.40 is limited to the documentation entry-point wording.

| Module | Change details | Link |
| --- | --- | --- |
| Documentation | Aligned the Chinese quickstart card with the English card so it explicitly says users can build and run their first agent. | [Quickstart](/productions/veadk/archives/1.0.0/en/get-started/quickstart) |

See the [VeADK 1.0.0 release](https://github.com/volcengine/veadk-python/releases/tag/1.0.0) for the complete published record.
